--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -1,26 +1,13 @@
-* {
-  box-sizing: border-box;
+body {
+    margin-top: 40px;
+    background: darkgray;
+    color: #fff;
+    font-family: Helvetica;
+    font-weight: bold;
+    text-align: center;
 }
 
-.table-board,
-.div-board {
-  border: 3px solid black;
-  width: 300px;
-  height: 300px;
-  margin: auto;
-  border-collapse: collapse;
-}
-
-td,
-.cell {
-  border: 4px solid black;
-  height: 33.33333%;
-  width: 33.3333%;
-}
-
-.cell {
-  float: left;
-  border: 2px solid black;
-  text-align: center;
-  font-size: 6em;
+h1 {
+    letter-spacing: 0.1em;
+    color: #f1f1f1
 }
