--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -1,6 +1,6 @@
 body {
     margin-top: 40px;
-    background: darkgray;
+    background: #A52A2A;
     color: #fff;
     font-family: Helvetica;
     font-weight: bold;
@@ -15,4 +15,51 @@ h1 {
 .container {
     margin: 0 auto;
     width: 400px;
+}
+
+#board {
+    width: 300px;
+    height: 300px;
+    border: 1px solid #dadada;
+    margin: 0 auto;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+#board > li {
+    list-style: none;
+    float: left;
+    overflow: hidden;
+    text-decoration:none;
+    width: 100px;
+    height: 100px;
+    background: #f1f1f1;
+    border: 1px solid #ccc;
+    border-right: 1px solid #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 20px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#board > li.x {
+    font-size: 40px;
+    color: #ed4e6e
+}
+
+#board > li.o {
+    font-size: 40px;
+    color: #485b6e;
+}
+
+#board > li:hover {
+    background: #f9f9f9;
+}
+
+#board > li:active {
+    width: 100px;
+    height: 100px;
+    border: 0;
 }
