--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -82,3 +82,18 @@ h1 {
     display: block;
     margin-top: 10px;
 }
+
+#reset {
+    text-align: center;
+        border: none;
+        padding: 0.6em 1.2em;
+        background: black;
+        color: #fff;
+        font-size: 1em;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        cursor: pointer;
+        display: inline-block;
+        margin: 3px 2px;
+        border-radius: 2px;
+}
