--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -80,8 +80,8 @@ h2 {
 
 #player-turn.x span.x,
 #player-turn.o span.o,
-#alerts.player-one-win > span.player-one-win,
-#alerts.player-two-win > span.player-two-win,
+#alerts.p1-win > span.p1-win,
+#alerts.p2-win > span.p2-win,
 #alerts.draw > span.draw {
     display: block;
     margin-top: 10px;
