--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -1,32 +1,43 @@
 body {
-  background: #A52A2A;
-  color: #fff;
-  font-family: Helvetica;
-  font-weight: bold;
   text-align: center;
+  background: #616161;
+  color: black;
 }
 
-h1 {
-  letter-spacing: 0.1em;
-  color: #f1f1f1
+.ttt-left {
+  width: 20%;
+  margin: auto;
+  margin-left: 5%;
+  float: left;
 }
 
-h2 {
-  text-transform: uppercase;
+.ttt-middle {
+  width: 50%;
+  margin: auto;
+  margin-bottom: 50px;
+  float: left;
 }
 
-.container {
-  margin: 0 auto;
-  width: 400px;
+.ttt-right {
+  width: 20%;
+  margin: auto;
+  margin-right: 5%;
+  float: right;
+}
+
+.ttt-header {
+  margin-bottom: 15px;
+  letter-spacing: 5px;
+  font-weight: 400;
 }
 
 #board {
   width: 300px;
   height: 300px;
-  border: 1px solid #dadada;
   margin: 0 auto;
   padding: 0;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 #board > li {
@@ -49,16 +60,16 @@ h2 {
 
 #board > li.x {
   font-size: 40px;
-  color: #E9967A;
+  color: #b71c1c;
 }
 
 #board > li.o {
   font-size: 40px;
-  color: #778899;
+  color: #37474f;
 }
 
 #board > li:hover {
-  background: #f9f9f9;
+  background: #e0e0e0;
 }
 
 #board > li:active {
@@ -76,11 +87,13 @@ h2 {
 #player-turn > span,
 #alerts > span {
   display: none;
-  color: #9e9e9e;
+  color: white;
 }
 
 #score > span {
-  color: #9e9e9e;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 #player-turn.x span.x,
@@ -89,30 +102,42 @@ h2 {
 #alerts.po-win > span.po-win,
 #alerts.draw > span.draw {
   display: block;
-  margin-top: 20px;
+  font-size: 18px;
+}
+
+#alerts.px-win > span.px-win,
+#alerts.po-win > span.po-win,
+#alerts.draw > span.draw {
+  margin-top: 0;
+}
+
+#player-turn.x span.x,
+#player-turn.o span.o {
+  margin-top: 10px;
 }
 
 #restart {
   text-align: center;
   border: none;
   padding: 0.6em 1.2em;
-  background: black;
-  color: #fff;
+  background: #bdbdbd;
+  color: white;
   font-size: 1em;
   letter-spacing: 1px;
   text-transform: uppercase;
   cursor: pointer;
   display: inline-block;
   margin: 3px 2px;
-  border-radius: 2px;
+  border-radius: 32px;
 }
 
-#reset-1, #reset-2 {
+#reset-1,
+#reset-2 {
   text-align: center;
   border: none;
   padding: 0.4em 0.6em;
-  background: black;
-  color: #fff;
+  background: #bdbdbd;
+  color: white;
   font-size: 1em;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -121,4 +146,84 @@ h2 {
   margin: 3px 2px;
   margin-left: 5px;
   border-radius: 32px;
+}
+
+#reset-1:hover,
+#reset-2:hover,
+#restart:hover {
+  color: #b71c1c;
+}
+
+.sub-header {
+  font-size: 18px;
+  margin-top: 0;
+}
+
+@media only screen and (max-width: 480px) {
+  #board {
+    margin-bottom: 0;
+    height: 280px;
+    width: 255px;
+  }
+
+  #board > li.x {
+    font-size: 30px;
+    color: #b71c1c;
+  }
+
+  #board > li.o {
+    font-size: 30px;
+    color: #37474f;
+  }
+
+  #board > li {
+    width: 85px;
+    height: 85px;
+  }
+
+  #board > li:active {
+    width: 85px;
+    height: 85px;
+    border: 0;
+  }
+
+  #info {
+    margin-top: 0;
+  }
+
+  #restart {
+    margin-bottom: 15px;
+  }
+}
+
+@media only screen and (max-width: 875px) {
+  .ttt-header {
+    font-size: 14px;
+  }
+
+  #reset-1,
+  #reset-2,
+  #restart,
+  #player-turn.x span.x,
+  #player-turn.o span.o,
+  #alerts.px-win > span.px-win,
+  #alerts.po-win > span.po-win,
+  #alerts.draw > span.draw,
+  #score > span,
+  .sub-header {
+    font-size: 12px;
+  }
+
+  .ttt-middle {
+    float: left;
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .ttt-right,
+  .ttt-left {
+    float: right;
+    width: 100%;
+    margin: auto;
+  }
 }
